src/test/deca/codegen/invalid/sansObjet/divFloat0.deca
// Description : Test with a div par 0 with Float
// Result : Error
{
    float x = 1.0;
    float y = 0.0;
    float z = x/y;
}
